--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-  Theme Name: Imperial
-  Theme URL: https://bootstrapmade.com/imperial-free-onepage-bootstrap-template/
-  Author: BootstrapMade
-  Author URL: https://bootstrapmade.com
-*/
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -505,6 +499,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 .color p{
 	color: white;
 }
+
 /* Como Section
 --------------------------------*/
 #como {
@@ -722,4 +717,52 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 .modal-footer {
     background-color: #f9f9f9;
+}
+
+/* General Section
+--------------------------------*/
+/* Mensajes
+--------------------------------*/
+#mensajes {
+    background: #fff;
+    padding: 80px 0;
+}
+
+#mensajes .section-title {
+    text-align:left;
+}
+
+#mensajes .mensajes-content {
+    height: 200px;
+}
+
+#mensajes .mensajes-text {
+    margin-top: 10px;
+    line-height: 20px;
+    text-align: justify;
+}
+.color{
+    background-color:#fff;
+}
+.color p{
+    color: white;
+}
+/* Citas
+--------------------------------*/
+/* Cabecera sesion Section
+--------------------------------*/
+
+#cabecera {
+    background: #fff;
+    padding: 20px 0;
+}
+
+#cabecera .cabecera-content {
+    height: 200px;
+}
+
+#cabecera .cabecera-text {
+    margin-top: 10px;
+    line-height: 20px;
+    text-align: justify;
 }
