Antes de probar la nueva estructura de chat.
Pend;
Fullcalendar
>Formato(Tamaño/color,botones/funciones)
>Conexion BBDD

Mensajería
>Borrar mensajes.
>Dar formato a la vista de mensajes. (tipo chat izquierda<->derecha)

Login
>Recuperar contraseña

--- a/css/style.css
+++ b/css/style.css
@@ -747,8 +747,19 @@ body.mobile-nav-active #mobile-nav-toggle {
 .color p{
     color: white;
 }
+.tabla_mensajes th {
+    text-align: center;
+}
 /* Citas
 --------------------------------*/
+#citas {
+    background: #fff;
+    padding: 80px 0;
+}
+
+#citas .section-title {
+    text-align:left;
+}
 /* Cabecera sesion Section
 --------------------------------*/
 
